--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     volumes:
       - "./conf.py:/app/conf.py"
     restart: unless-stopped
-#    ports:
-#      - "${TIMEKPR_PORT:-8080}:8080"
+    ports:
+      - "${TIMEKPR_PORT:-8080}:8080"
